--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styl.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Pokusy s VSCode</h1>
 
-    Jsem zvědavá, jestli to vyjde
+    Jsem zvědavá, jestli to vyjde<br>
 
-    jestli já to nakonec pochopím  
+    jestli já to nakonec pochopím <br> 
 
-
+    Zkusím to pochopit
 </body>
 </html>
