--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 <body>
     <h1>Pokusy s VSCode</h1>
 
-    Jsem zvědavá, jestli to vyjde<br>
-
-    jestli já to nakonec pochopím <br> 
-
-    Zkusím to pochopit
+    Tak asi se to podařilo
 </body>
 </html>
