--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styl.css">
-    <title>Document</title>
+    <title>JavaScript</title>
 </head>
 <body>
-    <h1>Pokusy s VSCode</h1>
-
-    Tak asi se to podařilo
+    <h1>Začínáme JavaScript</h1>
+<script>alert('Pěkně vítám')
+    
+</script>
 </body>
 </html>
