--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Začínáme JavaScript</h1>
 <script>alert('Pěkně vítám')
-    
+ let jmeno = prompt('Napiš svoje jméno')
 </script>
 </body>
 </html>
