--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Začínáme JavaScript</h1>
 <script>alert('Pěkně vítám')
  let jmeno = prompt('Napiš svoje jméno')
+ document.write('Ty jsi ' + jmeno + ' rád tě poznávám' )
 </script>
 </body>
 </html>
