--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <h1>Začínáme JavaScript</h1>
 <script>alert('Pěkně vítám')
  let jmeno = prompt('Napiš svoje jméno')
- document.write('Ty jsi ' + jmeno + ' rád tě poznávám' )
+    document.write('Ty jsi ' + jmeno + ', rád tě poznávám' )
+ let dotaz = confirm('Chceš pokračovat v JavaScriptu?')
+    if (dotaz)
+        document.write('Tak jdeme na to')
+    else
+        document.write('Tak nic')
 </script>
 </body>
 </html>
