--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+   
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,8 @@
 </head>
 <body>
     <h1>Začínáme JavaScript</h1>
-<script>alert('Pěkně vítám')
- let jmeno = prompt('Napiš svoje jméno')
-    document.write('Ty jsi ' + jmeno + ', rád tě poznávám <br>' )
- let dotaz = confirm('Chceš pokračovat v JavaScriptu?')
-    if (dotaz)
-        document.write('Tak jdeme na to')
-    else
-        document.write('Tak nic')
+    <script src="script.js"></script>
+<script>
 </script>
 </body>
 </html>
